--- a/styler.css
+++ b/styler.css
@@ -221,12 +221,27 @@ div.pg.one { perspective: 1000px;display: flex; translate: 0; opacity: 1; overfl
 div.mainwelcome {
     width: 100%;
     height: 200px;
-    background: linear-gradient(var(--prim), var(--darkprim));
-    text-align: center;
-    color: var(--monochrom);
-    font-family: UK;
+    background-image: linear-gradient(var(--prim), var(--darkprim));  
     align-content: center;
+    position: relative;
+} div.mainwelcome:before {
+    content: 'WELCOME FRESHIES';
+    align-content: center;
+    position:absolute;
+    top: 5%;
+    left: 5%;
+    font-family: UK;
+    text-align: center;
+    justify-self: center;
+    width: 90%;
     font-size: 1.5em;
+    color: var(--monochrom);
+    height: 90%;
+    border-radius: 15px;
+    background-image: url(./gifs/CCS\ GAMES.png);
+    background-size: cover;
+    background-position: center;
+    text-shadow: 3px 3px 3px var(--monocont);
 }
 
 @keyframes parallax {
@@ -260,22 +275,6 @@ div.meetcsc {
     align-items: center;
     gap: 7px;
     position: relative;
-}
-
-.two div.meetcsc:before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(var(--primT), transparent);
-    background-size: 10% 30%;
-    animation: marq 3.1s linear infinite;
-    pointer-events: none;
-}
-
-@keyframes marq {
-    from { background-position: 0px 0px }
-    to { background-position: 100% 0px }
 }
 
 button.switch {
@@ -354,10 +353,8 @@ button.switch {
 .board {
     width: 100%;
     height: 200px;
-    background-image: url(https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExZXR3N253ZHZ0anEwOXpwcGhjaGN0d3k0Y25rNzZtems0b2ZqcHFibSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/9LZTcawH3mc8V2oUqk/giphy.gif);
     background-size: cover;
     position: relative;
-    filter: contrast(0.5) brightness(0.7);
 }
 
 .pic {
@@ -405,20 +402,6 @@ button.switch {
 }
 
 .meetcsc.events { background-color: var(--darkprim);}
-.meetcsc.events:before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(var(--monochromT), transparent, var(--monochromT));
-    background-size: 10% 30%;
-    animation: marqy 3.1s linear infinite;
-}
-
-@keyframes marqy {
-    from { background-position: 0px 0px }
-    to { background-position: 0px 85% }
-}
 
 button.wannaccs {
     height: 30px;
@@ -480,7 +463,6 @@ div.jukestage {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 0.7em; 
     font-weight: bold;
-    animation: levit 1s alternate infinite ease-in-out;
 }
 .songer {color: var(--monochrom); font-family: UK; font-size: 1.2em; text-shadow: 3px 3px 3px var(--darkprim);}
 .dj{color:var(--monochrom); font-size: 0.4em;}
@@ -563,8 +545,6 @@ hr {width: 100%; color: var(--monochrom); }
     border-radius: 9px;
     background-color: var(--lightprim);
     pointer-events: none;
-    animation: fade 1s ease-in-out;
-    animation-timeline: scroll();
 }
 
 .goalsbanner {
@@ -622,20 +602,7 @@ hr {width: 100%; color: var(--monochrom); }
 }
 
 .meetcsc.home { background-color: var(--prim);}
-.meetcsc.home:before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, var(--monochromT), transparent, var(--monochromT));
-    background-size: 10% 30%;
-    animation: marq 4s linear infinite;
-}
 
-@keyframes levit {
-    from {translate: 0px 0px; }
-    to {translate: 0px 8px; }
-}
 @keyframes extrude {
     from {scale: 1;}
     to {scale: 0;}
@@ -686,10 +653,7 @@ p.answer {
     font-size: 1em;
 }
 
-.ge10d {
-    background-color: var(--primT);
-    animation: levit 2s alternate infinite;
-}
+.ge10d {background-color: var(--primT);}
 
 .ge10holder {
     background: linear-gradient(217deg, rgba(0, 217, 217, .8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(217, 217, 0, .8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(217, 0, 217, .8), rgba(0, 0, 255, 0) 70.71%);
@@ -796,3 +760,71 @@ p.answer {
 #a:after {background-image: url(./gifs/sunset.png); filter: invert(0)}
 #n:after {background-image: url(./gifs/night.png);}
 #w:after {background-image: url(./gifs/watery.png);}
+
+.dtr {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    height: fit-content;
+}
+
+.CC.slideshow {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    display: flex;
+} .CC.slideshow:after {
+    content: '';
+    position: absolute;
+    height: 20px;
+    bottom: 5px;
+    left: 180px;
+    border-radius: 10px;
+    background-color: var(--lightprim);
+    animation: sliderino 20s ease-in-out infinite;
+    animation-delay: calc(20s / 5);
+    width: 20px;
+    box-shadow: 0px 0px 3px 3px black;
+}
+
+@keyframes slide {
+    0% {translate: 0px 0px;}
+    15% {translate: 0px 0px;}
+    20% {translate: 100% 0px;}
+    35% {translate: 100% 0px;}
+    40% {translate: 200% 0px;}
+    100% {translate: 200% 0px;}
+}
+/* @keyframes tensslide {
+    0% {translate: 0px 0px;}
+    15% {translate: 0px 0px;}
+    20% {translate: 100% 0px;}
+    35% {translate: 100% 0px;}
+    40% {translate: 200% 0px;}
+    100% {translate: 200% 0px;}
+} */
+@keyframes sliderino {
+    0% {width: 20px; translate: 0px 0px;}
+    15% {width: 20px; translate: 0px 0px;}
+    20% {width: 120px; translate: -40px 0px;}
+    35% {width: 120px; translate: -40px 0px;}
+    40% {width: 180px; translate: -70px 0px;}
+    55% {width: 180px; translate: -70px 0px;}
+    60% {width: 240px; translate: -100px 0px;}
+    75% {width: 240px; translate: -100px 0px;}
+    80% {width: 300px; translate: -130px 0px;}
+    95% {width: 300px; translate: -130px 0px;}
+    100% {width: 20px 0px; translate: 0px 0px;}
+}
+
+.CC > .slide {
+    position: absolute;
+    box-sizing: border-box;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 300px;
+    color: white;
+    animation: slide var(--dur) ease-in-out infinite;
+    animation-delay: calc((var(--dur) / var(--slids)) * var(--sl));
+} .slide > * { image-rendering: optimizeQuality;}
