--- a/styler.css
+++ b/styler.css
@@ -20,7 +20,7 @@
     font-family: 'UK';
     src: url(./United\ Kingdom\ DEMO.otf);
 }
-
+html {scroll-behavior: smooth;}
 body {display: flex; margin: 0; overflow-x: hidden; overflow-y: scroll; }
 main.wrap {
     width: 100%;
@@ -761,14 +761,7 @@ p.answer {
 #n:after {background-image: url(./gifs/night.png);}
 #w:after {background-image: url(./gifs/watery.png);}
 
-.dtr {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    height: fit-content;
-}
-
-.CC.slideshow {
+.slideshow {
     position: relative;
     width: 100%;
     height: 300px;
@@ -778,7 +771,7 @@ p.answer {
     position: absolute;
     height: 20px;
     bottom: 5px;
-    left: 180px;
+    left: 190px;
     border-radius: 10px;
     background-color: var(--lightprim);
     animation: sliderino 20s ease-in-out infinite;
@@ -795,36 +788,56 @@ p.answer {
     40% {translate: 200% 0px;}
     100% {translate: 200% 0px;}
 }
-/* @keyframes tensslide {
+@keyframes tensslide {
     0% {translate: 0px 0px;}
-    15% {translate: 0px 0px;}
-    20% {translate: 100% 0px;}
-    35% {translate: 100% 0px;}
-    40% {translate: 200% 0px;}
+    5% {translate: 0px 0px;}
+    10% {translate: 100% 0px;}
+    15% {translate: 100% 0px;}
+    20% {translate: 200% 0px;}
     100% {translate: 200% 0px;}
-} */
+}
 @keyframes sliderino {
     0% {width: 20px; translate: 0px 0px;}
     15% {width: 20px; translate: 0px 0px;}
-    20% {width: 120px; translate: -40px 0px;}
-    35% {width: 120px; translate: -40px 0px;}
-    40% {width: 180px; translate: -70px 0px;}
-    55% {width: 180px; translate: -70px 0px;}
-    60% {width: 240px; translate: -100px 0px;}
-    75% {width: 240px; translate: -100px 0px;}
-    80% {width: 300px; translate: -130px 0px;}
-    95% {width: 300px; translate: -130px 0px;}
+    20% {width: 120px; translate: -50px 0px;}
+    35% {width: 120px; translate: -50px 0px;}
+    40% {width: 180px; translate: -80px 0px;}
+    55% {width: 180px; translate: -80px 0px;}
+    60% {width: 240px; translate: -110px 0px;}
+    75% {width: 240px; translate: -110px 0px;}
+    80% {width: 300px; translate: -140px 0px;}
+    95% {width: 300px; translate: -140px 0px;}
     100% {width: 20px 0px; translate: 0px 0px;}
 }
-
-.CC > .slide {
+.CC > .slide {animation: slide var(--dur) ease-in-out infinite; animation-delay: calc((var(--dur) / var(--slids)) * var(--sl));}
+.dtr > .slide {animation: tensslide var(--dur) ease-in-out infinite;animation-delay: calc((var(--dur) / var(--slids)) * var(--sl));}
+.slide {
     position: absolute;
     box-sizing: border-box;
     top: 0;
     left: -100%;
     width: 100%;
     height: 300px;
-    color: white;
-    animation: slide var(--dur) ease-in-out infinite;
-    animation-delay: calc((var(--dur) / var(--slids)) * var(--sl));
 } .slide > * { image-rendering: optimizeQuality;}
+
+.anchorge {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+} .anchs {
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--monochrom);
+    height: fit-content;
+    background-color: var(--lightprim);
+    border-radius: 20px 20px 0px 0px;
+    width: 200px;
+    text-shadow: 3px 3px 3px var(--monocont);
+    box-sizing: border-box;
+    font-size: 1em;
+    padding-bottom: 5px;
+    text-align: center;
+    border-top: 8px inset var(--primT);
+    transition: all 0.2s ease-in-out;
+} .anchs:hover {background-color: var(--primT); border-color: var(--lightprim);}
